// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomePage /> should render and match the snapshot 1`] = `
<section
  class="Section-sc-926gb3-0 CenteredSection-sc-1v37xy5-0 bFkkFm"
>
  <h1>
    <span>
      Github App!
    </span>
  </h1>
  <form
    class="Form-lxfvvp-0 jjHXOB"
  >
    <label
      for="username"
    >
      <span
        class="AtPrefix-sc-1c37cot-0 fzLJt"
      >
        <span>
          Enter Github username @
        </span>
      </span>
      <input
        class="Input-cmtoom-0 hFKhUb"
        id="username"
        placeholder="hannanshaik"
        type="text"
        value=""
      />
    </label>
    <div>
      <h3>
        <span>
          List of Repositories
        </span>
      </h3>
      <div
        class="List__Wrapper-sc-1x4ok71-0 dypyZp"
      >
        <ul
          class="List__Ul-sc-1x4ok71-1 hbhnfW"
        />
      </div>
    </div>
    <div>
      <h3>
        <span>
          List of Organizations
        </span>
      </h3>
      <div
        class="List__Wrapper-sc-1x4ok71-0 dypyZp"
      >
        <ul
          class="List__Ul-sc-1x4ok71-1 hbhnfW"
        />
      </div>
    </div>
  </form>
</section>
`;

exports[`<HomePage /> should render and match the snapshot when error comes 1`] = `
<section
  class="Section-sc-926gb3-0 CenteredSection-sc-1v37xy5-0 bFkkFm"
>
  <h1>
    <span>
      Github App!
    </span>
  </h1>
  <form
    class="Form-lxfvvp-0 jjHXOB"
  >
    <label
      for="username"
    >
      <span
        class="AtPrefix-sc-1c37cot-0 fzLJt"
      >
        <span>
          Enter Github username @
        </span>
      </span>
      <input
        class="Input-cmtoom-0 hFKhUb"
        id="username"
        placeholder="hannanshaik"
        type="text"
        value=""
      />
    </label>
    <p>
      Error Occured
    </p>
  </form>
</section>
`;

exports[`<HomePage /> should render and match the snapshot while loading 1`] = `
<section
  class="Section-sc-926gb3-0 CenteredSection-sc-1v37xy5-0 bFkkFm"
>
  <h1>
    <span>
      Github App!
    </span>
  </h1>
  <form
    class="Form-lxfvvp-0 jjHXOB"
  >
    <label
      for="username"
    >
      <span
        class="AtPrefix-sc-1c37cot-0 fzLJt"
      >
        <span>
          Enter Github username @
        </span>
      </span>
      <input
        class="Input-cmtoom-0 hFKhUb"
        id="username"
        placeholder="hannanshaik"
        type="text"
        value=""
      />
    </label>
    <p>
      loading...
    </p>
  </form>
</section>
`;
